ocaml (3.10.0-1) UNRELEASED; urgency=low

  [ Stefano Zacchiroli ]
  * New upstream (stable) release
  * ship ocaml-compiler-libs objects as STDLIB/ocaml-compiler-libs/{parsing/,
    typing/, utils/} rather than as a flat dir tree
  * debian/patches/*
    - removed: ocaml-interp_manpage, build_wo_debug_info (integrated upstream)
    - updated: install_ocamlbuild

 -- Stefano Zacchiroli <zack@debian.org>  Wed, 13 Jun 2007 16:15:14 +0200

ocaml (3.10.0~beta-1) experimental; urgency=low

  [ Samuel Mimram ]
  * Ship dh_ocaml into ocaml-nox

  [ Stefano Zacchiroli ]
  * New upstream beta release (3.10.0).
  * debian/patches/*
    - removed: versioned_libdir (no longer needed with this upstream)
    - ported to this upstream: call_ld_with_proper_flags, alpha_ld_no-relax,
      no_rpath
    - added: build_wo_debug_info.dpatch (avoid building camlp4/ocamldoc with
      debug info, wont be needed for the stable release)
  * CDBS class
    - added support for the OCAML_DLL_DIR variable, pointing ATM to the
      stublibs/ subdirectory of the standard library directory. It's
      substituted for @OCamlDllDir@ in .in files
    - remove files which have been generated from their .in counterparts upon
      clean target invocation
  * Policy
    - mandate the compilation of *.cm[ao] with debugging information for
      libraries and forbid it for bytecode programs
  * debian/rules
    - delegated more installation stuff to dh_install
  * debian/control
    - get rid of the no longer needed ocaml-source package

  [Ralf Treinen]
  * debian/patches/*
    - added: install_scripts_config: use a patched config.sh since PREFIX is
      diferent at compile time and at installation time
    - added: ocaml-interp_manpage, fixes typo in ocaml manpage
      (closes: Bug#417847).
  * debian/rules:
    - added creation of config/config.debian.install
    - Patch LIBDIR and STBLIBDIR setting in config/Makefile after invokation
      of configure
