@@ -1,12 +1,6 @@
 #!/usr/bin/make -f
-# Sample debian/rules that uses debhelper.
-# GNU copyright 1997 to 1999 by Joey Hess.
-#
-# Modified to make a template file for a multi-binary package with separated
-# build-arch and build-indep targets by Bill Allombert 2001
-
-# We want to use dpatch.
 include /usr/share/dpatch/dpatch.make
+
 PACKAGE = ocaml
 OCAMLMAJOR = 3.10
 OCAMLMINOR = 0
@@ -16,6 +10,7 @@ MD5SUMSDIR = /var/lib/ocaml/md5sums
 INSTDIR = $(CURDIR)/debian/ocaml-nox/usr
 
 NATIVE_ARCHS = $(shell cat debian/native-archs)
+DISTDIR = $(PACKAGE)-$(OCAMLMAJOR).$(OCAMLMINOR)
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
@@ -106,10 +101,14 @@ endif
 	$(MAKE) -C debian/policy
 	touch build-arch-stamp
 
-build-indep: build-indep-stamp
-build-indep-stamp: patch-stamp config-stamp
-	# Add here commands to compile the indep part of the package.
-	#$(MAKE) doc
+build-indep: build-indep-stamp config-stamp
+build-indep-stamp: patch-stamp
+	# create ocaml source tarball
+	ln -fs . $(DISTDIR)	# beware of the symlink recursion!
+	tar --anchored -chjf debian/$(DISTDIR).tar.bz2 \
+		--exclude=$(DISTDIR)/$(DISTDIR)	\
+		--exclude-from=debian/ocaml-source.exclude \
+		$(DISTDIR)/
 	touch $@
 
 clean: abi-sed unpatch
@@ -136,6 +135,7 @@ endif
 
 	dh_clean debian/README.labltk camlp4/config/Makefile.cnf camlp4/config/Makefile config/m.h config/s.h config/Makefile emacs/ocamltags driver/ocamlcomp.sh
 	debian/rules abi-sed-clean
+	rm -f debian/$(DISTDIR).tar.bz2
 
 install: install-indep install-arch
 install-indep: build-indep
